Deleted horizontal scroll, fixed margins. This commit closes #205

--- a/SplunkAppForWazuh/appserver/static/css/styles/component.css
+++ b/SplunkAppForWazuh/appserver/static/css/styles/component.css
@@ -93,11 +93,11 @@ md-chip {
 }
 
 .euiFlexGroup--gutterLarge {
-  margin: -12px;
+  margin: -8px;
 }
 
 .euiFlexGroup--gutterLarge > .euiFlexItem {
-  margin: 12px;
+  margin: 8px;
 }
 
 .euiPanel.euiPanel--paddingLarge {
